fix: strict Java 8 release, relocate packages